2004-02-14  Michael Neuhauser  <mike@firmix.at>

	* base/include/asm-arm/GNUmakefile.*: added rtai_usi.h
	* base/arch/arm/hal/hal.*: include asm/rtai_usi.h
	* base/arch/arm/hal/hal.*: re-added "retmode" to rtai_realtime_irq[]
	(sched/api.c has extern decl with retmode, so we need it here)

2004-02-15  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: added thread support for Linux server,
	  supporting Linux syscalls while remaining in hard real time.
	* base/include/rtai_sched.h: added declaration of light
	  rpc/receive/return to support the Linux syscall server.
	* base/include/asm-arm/rtai_lxrt.h and asm-i386/rtai_lxrt.h: added
	  declarations for Linux syscall registers.
	* base/sched/sched.*: added support to rpc to the Linux syscall
	  server, if installed.
	* base/sched/api.c: added specific light rpc/receive/return to
	  support the syscall server.
	* base/sched/sys.c: added an entry to create and init the Linux 
	  syscall server.

2004-02-14  Michael Neuhauser  <mike@firmix.at>

	* base/arch/arm/hal/hal.*: define rt_scheduling[] unconditionally,
	i.e. not depending on CONFIG_RTAI_SCHED_ISR_LOCK
	* base/arch/arm/hal/hal.* (rtai_syscall_trampoline): added USI SRQ call
	* base/include/asm-arm/rtai_hal.*: added RTAI_IFLAG

2004-02-14  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/asm-arm/rtai_use.h: added the new arch specific USI.
	* base/arch/i386/hal.*: modified deferred scheduling in interrupt 
	  handlers to avoid too many indirections, related variables
	  declared here instead than in sched.c.
	* base/arch/arm/hal.*: modified deferred scheduling in interrupt 
	  handlers to avoid too many indirections, as in i386.
	* base/sched/sched.*: sched locking variables from hal.c, added
	  hook for deferred scheduling in isr.
	* base/sched/api.c: removed hook for deferred scheduling in isr.

2004-02-06  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_use.h: reworked to use srq instead of LXRT for